@@ -3,17 +3,15 @@ package com.example.worldquiz.user;
 public class User {
         private String name;
         private String userName;
-        private String password;
         private String email;
 
         public User() {
 
         }
 
-        public User(String name, String userName, String password, String email) {
+        public User(String name, String userName, String email) {
                 this.name = name;
                 this.userName = userName;
-                this.password = password;
                 this.email = email;
         }
 
@@ -33,13 +31,6 @@ public class User {
                 this.userName = userName;
         }
 
-        public String getPassword() {
-                return password;
-        }
-
-        public void setPassword(String password) {
-                this.password = password;
-        }
 
         public String getEmail() {
                 return email;
