@@ -88,7 +88,7 @@
             android:layout_height="wrap_content"
             android:indeterminate="true"
             android:max="100"
-            android:visibility="gone"
+            android:visibility="invisible"
             android:layout_below="@+id/framelauout"
             android:indeterminateTint="#1a09d6"
             android:layout_marginTop="-7dp"/>
